<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grouping_dialog_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/grouping_dialog_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">

        <RadioGroup
            android:id="@+id/grouping_dialog_radio_grouping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_margin">

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/do_not_group_files"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_last_modified_daily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_last_modified_daily"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_last_modified_monthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_last_modified_monthly"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_date_taken_daily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_date_taken_daily"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_date_taken_monthly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_date_taken_monthly"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_file_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_file_type"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_extension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_extension"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_folder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/by_folder"/>

        </RadioGroup>

        <include
            layout="@layout/divider"/>

        <RadioGroup
            android:id="@+id/grouping_dialog_radio_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingBottom="@dimen/medium_margin">

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_ascending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/ascending"/>

            <com.simplemobiletools.commons.views.MyCompatRadioButton
                android:id="@+id/grouping_dialog_radio_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:text="@string/descending"/>
        </RadioGroup>

        <include
            android:id="@+id/use_for_this_folder_divider"
            layout="@layout/divider"/>

        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
            android:id="@+id/grouping_dialog_use_for_this_folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/use_for_this_folder"/>

        <com.simplemobiletools.commons.views.MyTextView
            android:id="@+id/grouping_dialog_bottom_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:text="@string/grouping_and_sorting"
            android:textSize="@dimen/smaller_text_size"/>

    </LinearLayout>
</ScrollView>
