<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_editor_actions_wrapper"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_actions_height"
    android:layout_alignParentBottom="true">

    <ImageView
        android:id="@+id/bottom_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/rotate"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_rotate_right_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_resize"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/bottom_resize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/resize"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_minimize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_aspect_ratio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bottom_rotate"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/bottom_aspect_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/free_aspect_ratio"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_aspect_ratio_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_flip_horizontally"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bottom_resize"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/bottom_flip_horizontally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flip_horizontally"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_flip_horizontally_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bottom_flip_vertically"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bottom_aspect_ratio"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/bottom_flip_vertically"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flip_vertically"
        android:padding="@dimen/normal_margin"
        android:src="@drawable/ic_flip_vertically_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bottom_flip_horizontally"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
