<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resize_image_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <com.simplemobiletools.commons.views.MyTextInputLayout
        android:id="@+id/resize_image_width_hint"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:hint="@string/width">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resize_image_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size" />

    </com.simplemobiletools.commons.views.MyTextInputLayout>

    <com.simplemobiletools.commons.views.MyTextView
        android:id="@+id/resize_image_colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resize_image_width_hint"
        android:layout_alignBottom="@+id/resize_image_width_hint"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/resize_image_width_hint"
        android:gravity="center"
        android:text=":"
        android:textStyle="bold" />

    <com.simplemobiletools.commons.views.MyTextInputLayout
        android:id="@+id/resize_image_height_hint"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/resize_image_width_hint"
        android:layout_alignBottom="@+id/resize_image_width_hint"
        android:layout_toEndOf="@+id/resize_image_colon"
        android:hint="@string/height">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/resize_image_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size" />

    </com.simplemobiletools.commons.views.MyTextInputLayout>

    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
        android:id="@+id/keep_aspect_ratio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resize_image_width_hint"
        android:checked="true"
        android:paddingTop="@dimen/activity_margin"
        android:paddingBottom="@dimen/activity_margin"
        android:text="@string/keep_aspect_ratio" />

</RelativeLayout>
